# hexapod_ik

./: .gitignore  CMakeLists.txt  README.md  package.xml  test_params.yaml
cmake/: FindHexapodController.cmake
include/hexapod_ik/: kdl_traj.hpp  multipod_ik.hpp
launch/: hexaforce.launch
script/: plot.py
src/: ik_tests.cpp  multipod_ik.cpp  multipod_ik_test.cpp  trac_ik_test.cpp
