<?xml version="1.0"?>
<package>
  <name>hexapod_ik</name>
  <version>0.0.1</version>
  <description>This package is made to test trac_ik for an hexapod</description>
  <author email="pbeeson@traclabs.com">Patrick Beeson</author>
  <maintainer email="dorian.goepp@inria.fr">Dorian Goepp</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>tf</run_depend>
  <!-- To be added
  <run_depend>hexapod_description</run_depend>
  -->
</package>
